fixed search bar overlapping scrollbar

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -47,6 +47,7 @@ $cucumber: #74854f;
   background-color: $bahama-blue;
   border: none;
   margin-bottom: none;
+  padding-right: 20px;
 }
 
 .nav-brand {
